src/test/ui/suggestions/lifetimes/missing-lifetimes-in-signature.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/missing-lifetimes-in-signature.rs:38:11
   |
LL | fn baz<G: 'a, T>(g: G, dest: &mut T) -> impl FnOnce() + '_
   |        -  ^^ undeclared lifetime
   |        |
   |        help: consider introducing lifetime `'a` here: `'a,`

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/missing-lifetimes-in-signature.rs:19:5
   |
LL |   fn foo<G, T>(g: G, dest: &mut T) -> impl FnOnce()
   |                            ------ hidden type `[closure@$DIR/missing-lifetimes-in-signature.rs:19:5: 22:6]` captures the anonymous lifetime defined here
...
LL | /     move || {
LL | |
LL | |         *dest = g.get();
LL | |     }
   | |_____^
   |
help: to declare that the `impl Trait` captures `'_`, you can add an explicit `'_` lifetime bound
   |
LL | fn foo<G, T>(g: G, dest: &mut T) -> impl FnOnce() + '_
   |                                                   ++++

error[E0311]: the parameter type `G` may not live long enough
  --> $DIR/missing-lifetimes-in-signature.rs:26:37
   |
LL | fn bar<G, T>(g: G, dest: &mut T) -> impl FnOnce() + '_
   |                                     ^^^^^^^^^^^^^^^^^^
   |
note: the parameter type `G` must be valid for the anonymous lifetime defined here...
  --> $DIR/missing-lifetimes-in-signature.rs:26:26
   |
LL | fn bar<G, T>(g: G, dest: &mut T) -> impl FnOnce() + '_
   |                          ^^^^^^
note: ...so that the type `[closure@$DIR/missing-lifetimes-in-signature.rs:32:5: 34:6]` will meet its required lifetime bounds
  --> $DIR/missing-lifetimes-in-signature.rs:26:37
   |
LL | fn bar<G, T>(g: G, dest: &mut T) -> impl FnOnce() + '_
   |                                     ^^^^^^^^^^^^^^^^^^
help: consider introducing an explicit lifetime bound
   |
LL | fn bar<'a, G: 'a, T>(g: G, dest: &mut T) -> impl FnOnce() + '_ + 'a
   |        ~~~~~                                                   ++++

error[E0311]: the parameter type `G` may not live long enough
  --> $DIR/missing-lifetimes-in-signature.rs:30:1
   |
LL | / {
LL | |
LL | |     move || {
LL | |         *dest = g.get();
LL | |     }
LL | | }
   | |_^
   |
note: the parameter type `G` must be valid for the anonymous lifetime defined here...
  --> $DIR/missing-lifetimes-in-signature.rs:26:26
   |
LL | fn bar<G, T>(g: G, dest: &mut T) -> impl FnOnce() + '_
   |                          ^^^^^^
note: ...so that the type `[closure@$DIR/missing-lifetimes-in-signature.rs:32:5: 34:6]` will meet its required lifetime bounds
  --> $DIR/missing-lifetimes-in-signature.rs:30:1
   |
LL | / {
LL | |
LL | |     move || {
LL | |         *dest = g.get();
LL | |     }
LL | | }
   | |_^
help: consider introducing an explicit lifetime bound
   |
LL ~ fn bar<'a, G: 'a, T>(g: G, dest: &mut T) -> impl FnOnce() + '_
LL |
LL | where
LL |     G: Get<T>,
LL | {
LL |
 ...

error[E0311]: the parameter type `G` may not live long enough
  --> $DIR/missing-lifetimes-in-signature.rs:49:45
   |
LL | fn qux<'a, G: 'a, T>(g: G, dest: &mut T) -> impl FnOnce() + '_
   |                                             ^^^^^^^^^^^^^^^^^^
   |
note: the parameter type `G` must be valid for the anonymous lifetime defined here...
  --> $DIR/missing-lifetimes-in-signature.rs:49:34
   |
LL | fn qux<'a, G: 'a, T>(g: G, dest: &mut T) -> impl FnOnce() + '_
   |                                  ^^^^^^
note: ...so that the type `[closure@$DIR/missing-lifetimes-in-signature.rs:55:5: 57:6]` will meet its required lifetime bounds
  --> $DIR/missing-lifetimes-in-signature.rs:49:45
   |
LL | fn qux<'a, G: 'a, T>(g: G, dest: &mut T) -> impl FnOnce() + '_
   |                                             ^^^^^^^^^^^^^^^^^^
help: consider introducing an explicit lifetime bound
   |
LL | fn qux<'b, 'a, G: 'b + 'a, T>(g: G, dest: &mut T) -> impl FnOnce() + '_ + 'b
   |        +++     ~~~~~~~                                                  ++++

error[E0311]: the parameter type `G` may not live long enough
  --> $DIR/missing-lifetimes-in-signature.rs:53:1
   |
LL | / {
LL | |
LL | |     move || {
LL | |         *dest = g.get();
LL | |     }
LL | | }
   | |_^
   |
note: the parameter type `G` must be valid for the anonymous lifetime defined here...
  --> $DIR/missing-lifetimes-in-signature.rs:49:34
   |
LL | fn qux<'a, G: 'a, T>(g: G, dest: &mut T) -> impl FnOnce() + '_
   |                                  ^^^^^^
note: ...so that the type `[closure@$DIR/missing-lifetimes-in-signature.rs:55:5: 57:6]` will meet its required lifetime bounds
  --> $DIR/missing-lifetimes-in-signature.rs:53:1
   |
LL | / {
LL | |
LL | |     move || {
LL | |         *dest = g.get();
LL | |     }
LL | | }
   | |_^
help: consider introducing an explicit lifetime bound
   |
LL ~ fn qux<'b, 'a, G: 'b + 'a, T>(g: G, dest: &mut T) -> impl FnOnce() + '_
LL |
LL | where
LL |     G: Get<T>,
LL | {
LL |
 ...

error[E0311]: the parameter type `G` may not live long enough
  --> $DIR/missing-lifetimes-in-signature.rs:62:58
   |
LL |     fn qux<'b, G: Get<T> + 'b, T>(g: G, dest: &mut T) -> impl FnOnce() + '_ {
   |                                                          ^^^^^^^^^^^^^^^^^^
   |
note: the parameter type `G` must be valid for the anonymous lifetime defined here...
  --> $DIR/missing-lifetimes-in-signature.rs:62:47
   |
LL |     fn qux<'b, G: Get<T> + 'b, T>(g: G, dest: &mut T) -> impl FnOnce() + '_ {
   |                                               ^^^^^^
note: ...so that the type `[closure@$DIR/missing-lifetimes-in-signature.rs:65:9: 67:10]` will meet its required lifetime bounds
  --> $DIR/missing-lifetimes-in-signature.rs:62:58
   |
LL |     fn qux<'b, G: Get<T> + 'b, T>(g: G, dest: &mut T) -> impl FnOnce() + '_ {
   |                                                          ^^^^^^^^^^^^^^^^^^
help: consider introducing an explicit lifetime bound
   |
LL |     fn qux<'c, 'b, G: 'c + Get<T> + 'b, T>(g: G, dest: &mut T) -> impl FnOnce() + '_ + 'c {
   |            +++     ~~~~~~~                                                           ++++

error[E0311]: the parameter type `G` may not live long enough
  --> $DIR/missing-lifetimes-in-signature.rs:62:77
   |
LL |       fn qux<'b, G: Get<T> + 'b, T>(g: G, dest: &mut T) -> impl FnOnce() + '_ {
   |  _____________________________________________________________________________^
LL | |
LL | |
LL | |         move || {
LL | |             *dest = g.get();
LL | |         }
LL | |     }
   | |_____^
   |
note: the parameter type `G` must be valid for the anonymous lifetime defined here...
  --> $DIR/missing-lifetimes-in-signature.rs:62:47
   |
LL |     fn qux<'b, G: Get<T> + 'b, T>(g: G, dest: &mut T) -> impl FnOnce() + '_ {
   |                                               ^^^^^^
note: ...so that the type `[closure@$DIR/missing-lifetimes-in-signature.rs:65:9: 67:10]` will meet its required lifetime bounds
  --> $DIR/missing-lifetimes-in-signature.rs:62:77
   |
LL |       fn qux<'b, G: Get<T> + 'b, T>(g: G, dest: &mut T) -> impl FnOnce() + '_ {
   |  _____________________________________________________________________________^
LL | |
LL | |
LL | |         move || {
LL | |             *dest = g.get();
LL | |         }
LL | |     }
   | |_____^
help: consider introducing an explicit lifetime bound
   |
LL ~     fn qux<'c, 'b, G: 'c + Get<T> + 'b, T>(g: G, dest: &mut T) -> impl FnOnce() + '_ {
LL |
LL |
LL |         move || {
LL |             *dest = g.get();
LL |         }
 ...

error[E0621]: explicit lifetime required in the type of `dest`
  --> $DIR/missing-lifetimes-in-signature.rs:72:45
   |
LL | fn bat<'a, G: 'a, T>(g: G, dest: &mut T) -> impl FnOnce() + '_ + 'a
   |                                  ------     ^^^^^^^^^^^^^^^^^^^^^^^ lifetime `'a` required
   |                                  |
   |                                  help: add explicit lifetime `'a` to the type of `dest`: `&'a mut T`

error[E0309]: the parameter type `G` may not live long enough
  --> $DIR/missing-lifetimes-in-signature.rs:83:44
   |
LL | fn bak<'a, G, T>(g: G, dest: &'a mut T) -> impl FnOnce() + 'a
   |            -                               ^^^^^^^^^^^^^^^^^^ ...so that the type `[closure@$DIR/missing-lifetimes-in-signature.rs:89:5: 91:6]` will meet its required lifetime bounds
   |            |
   |            help: consider adding an explicit lifetime bound...: `G: 'a`

error[E0309]: the parameter type `G` may not live long enough
  --> $DIR/missing-lifetimes-in-signature.rs:87:1
   |
LL |   fn bak<'a, G, T>(g: G, dest: &'a mut T) -> impl FnOnce() + 'a
   |              - help: consider adding an explicit lifetime bound...: `G: 'a`
...
LL | / {
LL | |
LL | |     move || {
LL | |         *dest = g.get();
LL | |     }
LL | | }
   | |_^ ...so that the type `[closure@$DIR/missing-lifetimes-in-signature.rs:89:5: 91:6]` will meet its required lifetime bounds

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0261, E0309, E0621, E0700.
For more information about an error, try `rustc --explain E0261`.
